Day_145 Sayonara Challenge kun ヾ(＠⌒ー⌒＠)ノ

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@
 # TestCaseFile
 **/*__tests
 
-# Temporary Files made for testing ignore if i forgor 💀
+# Temporary Files made for testing ignore if i forgor to delete 💀
 **/del.cpp
